[gd_scene load_steps=5 format=3 uid="uid://ceae06aaigfhh"]

[ext_resource type="Texture2D" uid="uid://22kadwsbabxm" path="res://images/mission_2.png" id="1_siyq4"]
[ext_resource type="Script" path="res://scripts/mission/learning_panel.gd" id="1_wn8yp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnk7u"]
bg_color = Color(0.376471, 0.760784, 0.658824, 0.25098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.376471, 0.760784, 0.658824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v23xn"]
bg_color = Color(0.376471, 0.760784, 0.658824, 0.14902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.376471, 0.760784, 0.658824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="LearningPanel" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0784314, 0.172549, 0.94902)
script = ExtResource("1_wn8yp")

[node name="PanelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GemLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.760784, 0.658824, 1)
theme_override_font_sizes/font_size = 48
text = "♦"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissionTitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.760784, 0.658824, 1)
theme_override_font_sizes/font_size = 48
text = "COMPARE CONSTRUCTION COMPANIES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContent" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="IntroText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 32
text = "Your city is rapidly growing, and you need to build houses to accommodate new residents! Two different construction companies offer to help."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 32
text = "Study the company data below, find the unit rates (houses per worker), and determine which company would require fewer workers to build 40 houses in a week."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GraphContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphCenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/GraphContainer"]
layout_mode = 2

[node name="GraphImage" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/GraphContainer/GraphCenterContainer"]
custom_minimum_size = Vector2(1200, 600)
layout_mode = 2
texture = ExtResource("1_siyq4")
expand_mode = 1
stretch_mode = 5

[node name="CompanyDataContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/GraphContainer"]
layout_mode = 2

[node name="CompanyDataLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/GraphContainer/CompanyDataContainer"]
custom_minimum_size = Vector2(800, 180)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
text = "[center][b][color=#60c2a8]Company A: City Builders Inc.[/color][/b]
• 2 workers build 8 houses per week
• 4 workers build 16 houses per week
• 6 workers build 24 houses per week
• 10 workers build 40 houses per week

[b][color=#e06666]Company B: Urban Growth Solutions[/color][/b]
• 3 workers build 9 houses per week
• 6 workers build 18 houses per week
• 9 workers build 27 houses per week
• 12 workers build 36 houses per week[/center]"
fit_content = true

[node name="UserInputContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="InputLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/UserInputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.760784, 0.658824, 1)
theme_override_font_sizes/font_size = 32
text = "Enter your answer:"
horizontal_alignment = 1

[node name="UserInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/UserInputContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
placeholder_text = "Type your answer here..."
alignment = 1

[node name="FeedbackLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/UserInputContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Feedback will appear here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SubmitButtonContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="SubmitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SubmitButtonContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_mnk7u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mnk7u")
theme_override_styles/normal = SubResource("StyleBoxFlat_v23xn")
text = "SUBMIT"

[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/MainContent/UserInputContainer/UserInput" to="." method="_on_user_input_text_submitted"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SubmitButtonContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
